fix/update dark mode

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -17,7 +17,7 @@ html * {
     padding: 0;
     box-sizing: border-box;
     font-family: var(--fonts);
-    transition: background-color 350ms ease-out;
+    /* transition: background-color 350ms ease-out; */
 }
 
 /* Body */
@@ -89,6 +89,7 @@ ul.navigation {
 
 .mobile-menu {
     /* background-color: var(--white); */
+    display: none;
     transform: translateX(100%);
     transition: transform 350ms ease-out;
 
@@ -143,6 +144,10 @@ ul.navigation {
 
     .navigation li {
         margin-inline-start: 0rem;
+    }
+
+    .mobile-menu {
+        display: flex;
     }
 
     .mobile-menu.open {
